--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "engines": {
-    "node": "20.14.0"
-  },
   "name": "major-project",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "engines": {
+    "node": "20.14.0"
   },
   "keywords": [],
   "author": "",
